# conan_monorepo

./: .gitignore  CMakeLists.txt  README.md  gen_build_install_test.sh  gen_build_test_install.sh
applications/arm_project/: CMakeLists.txt  README.md  conanfile.py
applications/arm_project/conan/profiles/: stm32f
applications/arm_project/doc/: journal.md
applications/arm_project/doc/stm32f401c-disco/: README.md
applications/arm_project/source/: main.cpp  stm32f401_disco.ld
applications/conan_example2/: README.md
applications/conan_example2/01 simple_cmake_project/: CMakeUserPresets.json
applications/conan_example2/02 tool_requires/: CMakeUserPresets.json  conanfile.txt
applications/conan_example2/03 different_configurations/: CMakeUserPresets.json
applications/conan_example2/different_configurations/: CMakeUserPresets.json
applications/conan_example2/simple_cmake_project/: CMakeUserPresets.json  README.md
applications/conan_example2/tool_requires/: CMakeUserPresets.json  conanfile.txt
applications/conan_template/: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
applications/cortex-m23/: CMakeLists.txt  CMakeUserPresets.json  README.md  armclang.cmake  conanfile.py  settings_user.yml
applications/cortex-m23/conan/: settings_user.yml
applications/cortex-m23/conan/profiles/: armclang  thumbv8
applications/cortex-m23/profiles/: armclang  cortex-m23  default  gcc_13
applications/cortex-m23/source/: main.c
applications/cortex-m23_cmake_cross-compile/: CMakeLists.txt  README.md
applications/stm32f401_disco_uvision/: README.md  main.cpp  stm32f401_disco_uvision.uvguix.n.boutin  stm32f401_disco_uvision.uvoptx  stm32f401_disco_uvision.uvprojx
applications/stm32f401_disco_uvision/Listings/: stm32f401_disco_uvision.map
applications/stm32f401_disco_uvision/Objects/: stm32f401_disco_uvision.axf
applications/stm32f401_disco_uvision/RTE/_Target_1/: Pre_Include_Global.h  RTE_Components.h
libs/MyLibrary/: CMakeLists.txt  README.md  gen_build_test_install.sh
libs/MyLibrary/source/: CMakePresets.json  gen_build_install.sh
libs/MyLibrary/source/include/MyLibrary/: lib_header.h
libs/MyLibrary/test/: CMakeLists.txt  gen_build_test.sh
libs/uart/: CMakeLists.txt  README.md  conanfile.py
libs/uart/include/: uart.h
libs/uart/src/: uart.c  uart.cpp
libs/uart/test/: CMakeLists.txt  test_uart.cpp
libs/uart/test_package/: CMakeLists.txt  conanfile.py
libs/uart/test_package/src/: example.c  example.cpp
profile/: gcc_13
source/: CMakeLists.txt  CMakePresets.json  MyLibraryConfig.cmake  gen_build_install.sh  lib_source.cpp  lib_source.h
test/: CMakeLists.txt  gen_build_test.sh  test_source.cpp
